...
        }
    }

    private var actionTitle: String {
        reason == .relocating
            ? "Abscond to Here"
            : "Settle Here"
    }

    @ViewBuilder
    private var header: some View {
        VStack(alignment: .leading, spacing: 10) {
            switch reason {
...
